# GenomicOps-MCP

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  server.py
.github/workflows/: tests.yml
genomicops/: __init__.py  liftover.py  ucsc_rest.py
src/server/: api.py  liftover.py  main.py  mcp_server.py  tools.py
tests/: conftest.py  test_api.py  test_liftover.py  test_mcp.py  test_tools.py  test_ucsc_rest.py
