[project]
name = "genomicops-mcp"
version = "0.1.0"
description = "An MCP server for genomic coordinate liftover and feature overlap using the UCSC REST API."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "requests",
    "pydantic",
    "python-mcp",
    "mcp[cli]>=1.16.0",
    "fastmcp>=2.12.4",
]

[project.scripts]
genomicops-server = "server.main:main"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.22.0",
    "pytest-mock>=3.12",
    "httpx>=0.28.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.pytest.ini_options]
markers = [
    "smoke: lightweight smoke tests for basic MCP functionality",
    "integration: marks tests that perform real API calls or I/O",
]
